# thevenin

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/linters/: .codespellrc  .flake8
.github/workflows/: ci.yaml  release.yml
docs/: .buildinfo  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/api/: index.doctree
docs/.doctrees/api/thevenin/: index.doctree
docs/.doctrees/api/thevenin/loadfns/: index.doctree
docs/.doctrees/api/thevenin/plotutils/: index.doctree
docs/.doctrees/development/: code_of_conduct.doctree  code_style_and_linting.doctree  code_styling.doctree  development_environments.doctree  index.doctree  issues_and_features.doctree  patterns_and_conventions.doctree  project_layout.doctree  project_overview.doctree  review_process.doctree  tests_and_coverage.doctree  version_control.doctree
docs/.doctrees/examples/: dict_inputs.doctree  example1.doctree  example2.doctree  index.doctree  ramping.doctree  step_functions.doctree  yaml_inputs.doctree
docs/.doctrees/user_guide/: basic_tutorial.doctree  equivalent_circuit_models.doctree  index.doctree  installation.doctree  model_description.doctree  what_is_thevenin.doctree
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: index.doctree
docs/_build/.doctrees/api/thevenin/: index.doctree
docs/_build/.doctrees/examples/: example2.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/thevenin/: _model.html  _solutions.html
docs/_build/api/: index.html
docs/_build/api/thevenin/: index.html
docs/_build/examples/: example1.html
docs/_modules/: index.html
docs/_modules/thevenin/: _experiment.html  _ida_solver.html  _model.html  _solutions.html
docs/_modules/thevenin/loadfns/: _ramps.html  _steps.html
docs/_modules/thevenin/plotutils/: _colors.html
docs/_source/api/: index.rst
docs/_source/examples/: example2.ipynb  index.rst
docs/_sources/: index.rst.txt
docs/_sources/api/thevenin/: index.rst.txt
docs/_sources/development/: code_of_conduct.rst.txt  code_style_and_linting.rst.txt  code_styling.rst.txt  development_environments.rst.txt  issues_and_features.rst.txt  patterns_and_conventions.rst.txt  project_layout.rst.txt  project_overview.rst.txt  review_process.rst.txt  tests_and_coverage.rst.txt  version_control.rst.txt
docs/_sources/examples/: dict_inputs.ipynb.txt  example1.ipynb.txt  example2.ipynb.txt  ramping.ipynb.txt  step_functions.ipynb.txt  yaml_inputs.ipynb.txt
docs/_sources/user_guide/: basic_tutorial.ipynb.txt  equivalent_circuit_models.rst.txt  installation.rst.txt  model_description.rst.txt  what_is_thevenin.rst.txt
docs/_static/: custom.css
docs/api/: index.html
docs/api/thevenin/: index.html
docs/api/thevenin/loadfns/: index.html
docs/api/thevenin/plotutils/: index.html
docs/development/: code_of_conduct.html  code_style_and_linting.html  code_styling.html  development_environments.html  index.html  issues_and_features.html  patterns_and_conventions.html  project_layout.html  project_overview.html  review_process.html  tests_and_coverage.html  version_control.html
docs/examples/: dict_inputs.html  example1.html  example2.html  index.html  ramping.html  step_functions.html  yaml_inputs.html
docs/jupyter_execute/examples/: dict_inputs.ipynb  example1.ipynb  example2.ipynb  ramping.ipynb  step_functions.ipynb  yaml_inputs.ipynb
docs/jupyter_execute/user_guide/: basic_tutorial.ipynb
docs/source/: conf.py  index.rst
docs/source/_templates/: copyright.html  navbar-logo.html
docs/source/api/thevenin/: index.rst
docs/source/development/: code_of_conduct.rst  development_environments.rst  index.rst  issues_and_features.rst  patterns_and_conventions.rst  project_layout.rst  project_overview.rst  tests_and_coverage.rst  version_control.rst
docs/source/examples/: dict_inputs.ipynb  index.rst  prediction.py  prediction_interface.ipynb  ramping.ipynb  step_functions.ipynb  yaml_inputs.ipynb
docs/source/user_guide/: basic_tutorial.ipynb  index.rst  installation.rst  model_description.rst  what_is_thevenin.rst
docs/static/: custom.js
docs/user_guide/: basic_tutorial.html  equivalent_circuit_models.html  index.html  installation.html  model_description.html  what_is_thevenin.html
environments/: rtd_environment.yml
scripts/: version_checker.py
src/thevenin/: __init__.py  _basemodel.py  _experiment.py  _ida_solver.py  _model.py  _prediction.py  _simulation.py  _solutions.py
src/thevenin/loadfns/: __init__.py  _ramps.py  _steps.py
src/thevenin/plotutils/: __init__.py  _colors.py
src/thevenin/solvers/: __init__.py  _cvode.py
src/thevenin/templates/: params.yaml
tests/: test_basemodel.py  test_basemodel_helpers.py  test_experiment.py  test_ida_solver.py  test_loadfns.py  test_model.py  test_plotutils.py  test_prediction.py  test_simulation.py  test_solutions.py
(+3 files in other folders)
