[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thevenin"
readme = "README.md"
dynamic = ["version"]
description = "Packaged Thevenin equivalent circuit model."
requires-python = ">=3.8,<3.12"
authors = [{name = "Corey R. Randall", email = "corey.randall@nrel.gov"}]
maintainers = [{name = "Corey R. Randall", email = "corey.randall@nrel.gov"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scikits-odes-sundials",
    "scipy",
    "matplotlib",
    "ruamel.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "thevenin.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thevenin = ["templates/*.yaml",]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "genbadge[all]",
    "codespell",
    "flake8",
    "autopep8",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-copybutton",
    "myst-nb",
    "pydata-sphinx-theme",
]
