[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thevenin"
readme = "README.md"
dynamic = ["version"]
description = "Equivalent circuit models in Python."
keywords = ["ECM", "equivalent", "circuit", "model", "battery"]
requires-python = ">=3.9,<3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.randall@nrel.gov" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.randall@nrel.gov" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ruamel.yaml",
    "scikit-sundae",
]

[tool.setuptools.dynamic]
version = {attr = "thevenin.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thevenin = ["templates/*.yaml"]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "genbadge[all]",
    "flake8",
    "autopep8",
    "codespell",
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]

[project.urls]
Homepage = "https://github.com/NREL/thevenin"
Documentation = "https://thevenin.readthedocs.io"
Repository = "https://github.com/NREL/thevenin"
Issues = "https://github.com/NREL/thevenin/issues"
